# eve_online_tools

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
corporation_tax/: Cargo.toml
corporation_tax/examples/: generate_xlsx.rs
corporation_tax/src/: db_op.rs  esi.rs  main.rs  report.rs
db_wallet/: Cargo.toml
db_wallet/src/: lib.rs  m20220101_000001_create_table.rs
db_wallet/src/entities/: characters.rs  corporation_wallet_journal.rs  corporations.rs  mod.rs  pap_journal.rs  prelude.rs  tax_exemption_journal.rs  tax_parameters.rs  taxable_list.rs  users.rs
db_wallet_generate/: Cargo.toml
db_wallet_generate/src/: main.rs
